Added some color

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>MovieProto</title>
+	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
+
 	<h1>Working</h1>
 	<p>---// Skapa formulär för ny film//---</p>
 	<p>---//Visa alla filmer i lista//---</p>
