added construct and html form function

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<option value="Commedy">Commedy</option>
 	</select>
       <input id="Rating" type="number" max="10" min="0" placeholder="Rating" />
-    <input type="button" value="Save Film" onclick="addMovie(genreIn.value)" />
+    <input type="button" value="Save Film" onclick="allMovies.newMovieFromForm()" />
   </form>
 <br>
 <br>
