--- a/index.html
+++ b/index.html
@@ -7,51 +7,34 @@
 </head>
 <body>
 
+
 	<h1>MovieDatabase</h1>
 
+	<h2> Add Movie </h2>
+	<form>
+		<input id="title" type="text" placeholder="Title" />
+		<input id="Relasey" type="number" placeholder="Release Year" />
+		<select id="genreInput" name="Genre">
+			<option value="Horror">Horror</option>
+			<option value="Action">Action</option>
+			<option value="Adventure">Adventure</option>
+			<option value="Sci-Fi">Sci-Fi</option>
+			<option value="Commedy">Commedy</option>
+		</select>
+		<input id="Rating" type="number" max="10" min="0" placeholder="Rating" />
+		<input type="button" value="Save Film" onclick="allMovies.newMovieFromForm()" />
+	</form>
 
 	<h2>Filmer:</h2>
+	<h3> Sortera : </h3>
 
-<div id="test"> </div>
-
-<br>
-<br>
-<h2> Add Movie </h2>
-  <form>
-    <input id="title" type="text" placeholder="Title" />
-    <input id="Relasey" type="number" placeholder="Release Year" />
-    <select id="genreInput" name="Genre">
-		<option value="Horror">Horror</option>
-		<option value="Action">Action</option>
-		<option value="Adventure">Adventure</option>
-		<option value="Sci-Fi">Sci-Fi</option>
-		<option value="Commedy">Commedy</option>
-	</select>
-      <input id="Rating" type="number" max="10" min="0" placeholder="Rating" />
-    <input type="button" value="Save Film" onclick="allMovies.newMovieFromForm()" />
-  </form>
-<br>
-<br>
-<br>
+	<div id="test"> </div>
+	
 	<p>---// Skapa formulär för ny film//---</p>
 	<p>---//Visa alla filmer i lista//---</p>
 	<p>---//Betygsätta individuella filmer//---</p>
 	<p>---//Sortera filmer efter kriterier så som : högst rating, sämst rating, genre//---</p>
 	<p>---//Lägga till och ta bort genres från en film//---</p>
-<!--
-	<h2>Add Movie</h2>
-
-	<input type="text" placeholder="Title" id="filmName">
-	<input type="number" placeholder="Release Year" id="filmYear">
-	<select name="Genre">
-		<option value="Horror">Horror</option>
-		<option value="Action">Action</option>
-		<option value="Adventure">Adventure</option>
-		<option value="Sci-Fi">Sci-Fi</option>
-		<option value="Commedy">Commedy</option>
-	</select>
-	<input max="10" min="0" type="number" placeholder="Rating" id="filmRate">
-	<input type="submit" id=""> -->
 
 	<script src="main.js"></script>
 </body>
