--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>MovieProto</title>
-	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
 
@@ -29,14 +29,14 @@
 	<h3> Sortera : </h3>
 
 	<div id="test"> </div>
-	
+
 	<p>---// Skapa formulär för ny film//---</p>
 	<p>---//Visa alla filmer i lista//---</p>
 	<p>---//Betygsätta individuella filmer//---</p>
 	<p>---//Sortera filmer efter kriterier så som : högst rating, sämst rating, genre//---</p>
 	<p>---//Lägga till och ta bort genres från en film//---</p>
 
-	<script src="main.js"></script>
+	<script src="js/main.js"></script>
 </body>
 </html>
 
