--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<option value="Sci-Fi">Sci-Fi</option>
 			<option value="Comedy">Comedy</option>
 		</select>
-		<input type="button" value="Save Film" onclick="" />
+		<input type="button" value="Save Film" onclick="allMovies.addnewGenre()" />
 		<p> Remove Genre : </p>
 		<select id="removeGenre" name="Genre">
 			<option value="Horror">Horror</option>
@@ -52,14 +52,10 @@
 			<option value="Sci-Fi">Sci-Fi</option>
 			<option value="Comedy">Comedy</option>
 		</select>
-		<input type="button" value="Save Film" onclick="" />
+		<input type="button" value="Save Film" onclick="allMovies.removeGenre()" />
 
 	</div>
 
-
-	<p>---// Skapa formulär för ny film//---</p>
-	<p>---//Visa alla filmer i lista//---</p>
-	<p>---//Betygsätta individuella filmer//---</p>
 	<p>---//Sortera filmer efter kriterier så som : högst rating, sämst rating, genre//---</p>
 	<p>---//Lägga till och ta bort genres från en film//---</p>
 
