--- a/index.html
+++ b/index.html
@@ -27,7 +27,21 @@
 
 	<h2>Filmer:</h2>
 	<h3> Sortera : </h3>
+	<input id="" type="number" placeholder="ReleaseYear" />	
+	<input type="button" value="Highest Rating" onclick="" />
+	<input type="button" value="Lowest Rating" onclick="" />
+	<select id="sortbygenre" name="Genre">
+		<option value="Select">Select Genre</option>
+		<option value="Horror">Horror</option>
+		<option value="Action">Action</option>
+		<option value="Adventure">Adventure</option>
+		<option value="Sci-Fi">Sci-Fi</option>
+		<option value="Comedy">Comedy</option>
+	</select>
+
 	<div id="test"> </div>
+	
+
 	<h2> Edit movie </h2>
 
 	<div id="editDiv">
