Added high/low rating search

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 	<h2>Filmer:</h2>
 	<h3> Sortera : </h3>
 	<input id="yearSearch" type="number" placeholder="ReleaseYear" onkeyup="allMovies.sortYear()" />	
-	<input type="button" value="Highest Rating" onclick="" />
-	<input type="button" value="Lowest Rating" onclick="" />
+	<input type="button" value="Highest Rating" onclick="allMovies.sortByHighRating()" />
+	<input type="button" value="Lowest Rating" onclick="allMovies. sortByLowRating()" />
 	<input type="text" value="" placeholder="Genre" onkeydown="" />
 	<input type="button" value="Show All Movies" onclick="allMovies.postMovies()" />
 
